Migrate codebase to Java 17 by using OpenRewrite. No manual changes in this commit.